WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248257
[IFC][Integration][Line clamp] LayoutStateMaintainer should not reset line clamp
https://bugs.webkit.org/show_bug.cgi?id=248257
Summary
[IFC][Integration][Line clamp] LayoutStateMaintainer should not reset line clamp
zalan
Reported
2022-11-22 20:58:53 PST
ssia
Attachments
[fast-cq]Patch
(4.15 KB, patch)
2022-11-22 21:04 PST
,
zalan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2022-11-22 21:04:21 PST
Created
attachment 463681
[details]
[fast-cq]Patch
EWS
Comment 2
2022-11-23 08:41:54 PST
Committed
256974@main
(a5ff1bcac2f0): <
https://commits.webkit.org/256974@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463681
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-11-23 08:42:17 PST
<
rdar://problem/102629474
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug