[IFC][Integration][Line clamp] LayoutStateMaintainer should not reset line clamp https://bugs.webkit.org/show_bug.cgi?id=248257

Reviewed by Antti Koivisto.

Line-clamp is sticky across "layout states" (which we seem to create even when the renderer !needsFullRepaint())

* Source/WebCore/page/FrameViewLayoutContext.cpp:
(WebCore::FrameViewLayoutContext::pushLayoutState):
* Source/WebCore/rendering/RenderLayoutState.cpp:
(WebCore::RenderLayoutState::RenderLayoutState):
* Source/WebCore/rendering/RenderLayoutState.h:

Canonical link: https://commits.webkit.org/256974@main